feat(reuse): I reused stuff from previous version to take the plugin back to its best shape.